Fix chevron alignment in circles

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -84,3 +84,7 @@ body.is-loading #banner ul {
   text-transform: uppercase;
   margin-top: -14px;
 }
+
+a.special:not(.button):before {
+  padding-top: 1px;
+}
